Data modeling project 2 (Lesson 5) ready for first submission

--- a/DataEngineering/1-DataModeling/Lesson5/Project_1B_Project.ipynb
+++ b/DataEngineering/1-DataModeling/Lesson5/Project_1B_Project.ipynb
@@ -35,7 +35,10 @@
     "import glob\n",
     "import numpy as np\n",
     "import json\n",
-    "import csv"
+    "import csv\n",
+    "\n",
+    "from cassandra.cluster import Cluster\n",
+    "from IPython.display import HTML"
    ]
   },
   {
@@ -59,15 +62,14 @@
     }
    ],
    "source": [
-    "# checking your current working directory\n",
+    "# checking the current working directory\n",
     "print(os.getcwd())\n",
     "\n",
-    "# Get your current folder and subfolder event data\n",
+    "# Get the current folder and subfolder event data\n",
     "filepath = os.getcwd() + '/event_data'\n",
     "\n",
     "# Create a for loop to create a list of files and collect each filepath\n",
     "for root, dirs, files in os.walk(filepath):\n",
-    "    \n",
     "    # join the file path and roots with the subdirectories using glob\n",
     "    file_path_list = glob.glob(os.path.join(root,'*'))"
    ]
@@ -85,30 +87,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# initiating an empty list of rows that will be generated from each file\n",
+    "# Initiate an empty list of rows that will be generated from each file\n",
     "full_data_rows_list = [] \n",
     "    \n",
-    "# for every filepath in the file path list \n",
+    "# For every filepath in the file path list \n",
     "for f in file_path_list:\n",
-    "\n",
-    "    # reading csv file \n",
+    "    # Read csv file \n",
     "    with open(f, 'r', encoding = 'utf8', newline='') as csvfile: \n",
-    "        # creating a csv reader object \n",
+    "        # Create a csv reader object \n",
     "        csvreader = csv.reader(csvfile) \n",
     "        next(csvreader)\n",
     "        \n",
-    "        # extracting each data row one by one and append it        \n",
+    "        # Extract each data row one by one and append it        \n",
     "        for line in csvreader:\n",
     "            full_data_rows_list.append(line) \n",
     "            \n",
-    "# creating a smaller event data csv file called event_datafile_full csv that will be used to insert data into the \\\n",
-    "# Apache Cassandra tables\n",
+    "# Create a smaller event data csv file called event_datafile_new.csv \n",
+    "# that will be used to insert data into the Apache Cassandra tables\n",
     "csv.register_dialect('myDialect', quoting=csv.QUOTE_ALL, skipinitialspace=True)\n",
     "\n",
     "with open('event_datafile_new.csv', 'w', encoding = 'utf8', newline='') as f:\n",
     "    writer = csv.writer(f, dialect='myDialect')\n",
     "    writer.writerow(['artist','firstName','gender','itemInSession','lastName','length',\\\n",
-    "                'level','location','sessionId','song','userId'])\n",
+    "                     'level','location','sessionId','song','userId'])\n",
     "    for row in full_data_rows_list:\n",
     "        if (row[0] == ''):\n",
     "            continue\n",
@@ -178,8 +179,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from cassandra.cluster import Cluster\n",
-    "\n",
+    "# Create a cluster object and connect to it with a \"session\"\n",
     "try:\n",
     "    cluster = Cluster(['127.0.0.1'])\n",
     "    session = cluster.connect()\n",
@@ -200,6 +200,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create a keyspace called `udacity`\n",
     "try:\n",
     "    session.execute(\n",
     "        \"\"\"\n",
@@ -224,6 +225,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Set the working keyspace to the freshly made `udacity` keyspace\n",
     "try:\n",
     "    session.set_keyspace('udacity')\n",
     "except Exception as e:\n",
@@ -241,17 +243,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create queries to ask the following three questions of the data\n",
-    "\n",
-    "### 1. Give me the artist, song title and song's length in the music app history that was heard during  sessionId = 338, and itemInSession  = 4\n",
-    "\n",
-    "\n",
-    "### 2. Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name) for userid = 10, sessionid = 182\n",
-    "    \n",
-    "\n",
-    "### 3. Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
-    "\n",
-    "\n"
+    "## Create queries to ask the following three questions of the data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Query 1: Give me the artist, song title and song's length in the music app history that was heard during  sessionId = 338, and itemInSession  = 4"
    ]
   },
   {
@@ -260,13 +259,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Query 1:\n",
-    "## Give me the artist, song title and song's length in the music app history \n",
-    "## that was heard during sessionId = 338, and itemInSession = 4\n",
+    "# Create the table for this query\n",
     "\n",
     "query = \\\n",
     "    \"\"\"\n",
-    "    CREATE TABLE IF NOT EXISTS table_1 (\n",
+    "    CREATE TABLE IF NOT EXISTS artist_song_table (\n",
     "      artist_name     TEXT,\n",
     "      song_title      TEXT,\n",
     "      song_length     DOUBLE,\n",
@@ -290,11 +287,13 @@
    },
    "outputs": [],
    "source": [
+    "# Insert the appropriate data based on the data model\n",
+    "\n",
     "file = 'event_datafile_new.csv'\n",
     "\n",
     "query = \\\n",
     "    \"\"\"\n",
-    "    INSERT INTO table_1 (\n",
+    "    INSERT INTO artist_song_table (\n",
     "      artist_name,\n",
     "      song_title,\n",
     "      song_length,\n",
@@ -326,21 +325,45 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Faithless Music Matters (Mark Knight Dub) 495.3073\n"
-     ]
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>artist_name</th>\n",
+       "      <th>song_title</th>\n",
+       "      <th>song_length</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>Faithless</td>\n",
+       "      <td>Music Matters (Mark Knight Dub)</td>\n",
+       "      <td>495.3073</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Do a SELECT to verify the data model and \n",
+    "# that correct data has been inserted into the table\n",
+    "\n",
     "query = \\\n",
     "    \"\"\"\n",
     "    SELECT\n",
     "      artist_name, \n",
     "      song_title, \n",
     "      song_length \n",
-    "    FROM table_1 \n",
+    "    FROM artist_song_table \n",
     "    WHERE\n",
     "      session_id=338 AND\n",
     "      item_in_session=4\n",
@@ -351,15 +374,14 @@
     "except Exception as e:\n",
     "    print(e)\n",
     "\n",
-    "for row in rows:\n",
-    "    print(row.artist_name, row.song_title, row.song_length)"
+    "HTML(pd.DataFrame(rows).to_html(index=False))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### COPY AND REPEAT THE ABOVE THREE CELLS FOR EACH OF THE THREE QUESTIONS"
+    "### Query 2. Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name) for userid = 10, sessionid = 182"
    ]
   },
   {
@@ -368,13 +390,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Query 2: \n",
-    "## Give me only the artist, song (sorted by itemInSession) and user (first and last name)\n",
-    "## for userid = 10, sessionid = 182\n",
+    "# Create the table for this query\n",
     "\n",
     "query = \\\n",
     "    \"\"\"\n",
-    "    CREATE TABLE IF NOT EXISTS table_2 (\n",
+    "    CREATE TABLE IF NOT EXISTS artist_song_user_table (\n",
     "      artist_name     TEXT,\n",
     "      song_title      TEXT,\n",
     "      first_name      TEXT,\n",
@@ -398,11 +418,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Insert the appropriate data based on the data model\n",
+    "\n",
     "file = 'event_datafile_new.csv'\n",
     "\n",
     "query = \\\n",
     "    \"\"\"\n",
-    "    INSERT INTO table_2 (\n",
+    "    INSERT INTO artist_song_user_table (\n",
     "      artist_name,\n",
     "      song_title,\n",
     "      first_name,\n",
@@ -427,17 +449,63 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Down To The Bone Keep On Keepin' On Sylvie Cruz 0\n",
-      "Three Drives Greece 2000 Sylvie Cruz 1\n",
-      "Sebastien Tellier Kilometer Sylvie Cruz 2\n",
-      "Lonnie Gordon Catch You Baby (Steve Pitron & Max Sanna Radio Edit) Sylvie Cruz 3\n"
-     ]
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>artist_name</th>\n",
+       "      <th>song_title</th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>last_name</th>\n",
+       "      <th>item_in_session</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>Down To The Bone</td>\n",
+       "      <td>Keep On Keepin' On</td>\n",
+       "      <td>Sylvie</td>\n",
+       "      <td>Cruz</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Three Drives</td>\n",
+       "      <td>Greece 2000</td>\n",
+       "      <td>Sylvie</td>\n",
+       "      <td>Cruz</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Sebastien Tellier</td>\n",
+       "      <td>Kilometer</td>\n",
+       "      <td>Sylvie</td>\n",
+       "      <td>Cruz</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Lonnie Gordon</td>\n",
+       "      <td>Catch You Baby (Steve Pitron &amp; Max Sanna Radio Edit)</td>\n",
+       "      <td>Sylvie</td>\n",
+       "      <td>Cruz</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Do a SELECT to verify the data model and \n",
+    "# that correct data has been inserted into the table\n",
+    "\n",
     "query = \\\n",
     "    \"\"\"\n",
     "    SELECT\n",
@@ -446,7 +514,7 @@
     "      first_name,\n",
     "      last_name,\n",
     "      item_in_session\n",
-    "    FROM table_2 \n",
+    "    FROM artist_song_user_table \n",
     "    WHERE \n",
     "      user_id=10 AND\n",
     "      session_id=182\n",
@@ -457,8 +525,14 @@
     "except Exception as e:\n",
     "    print(e)\n",
     "\n",
-    "for row in rows:\n",
-    "    print(row.artist_name, row.song_title, row.first_name, row.last_name, row.item_in_session)"
+    "HTML(pd.DataFrame(rows).to_html(index=False))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Query 3. Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'"
    ]
   },
   {
@@ -467,18 +541,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Query 3: \n",
-    "## Give me every user name (first and last) in my music app history \n",
-    "## who listened to the song 'All Hands Against His Own'\n",
+    "# Create the table for this query\n",
     "\n",
     "query = \\\n",
     "    \"\"\"\n",
-    "    CREATE TABLE IF NOT EXISTS table_3 (\n",
+    "    CREATE TABLE IF NOT EXISTS user_song_table (\n",
     "      first_name      TEXT,\n",
     "      last_name       TEXT,\n",
     "      song_title      TEXT, -- partition key\n",
-    "      session_id      INT,  -- clustering column 0, needed for unique PK\n",
-    "      item_in_session INT,  -- clustering column 1, needed for unique PK\n",
+    "      session_id      INT,  -- clustering column 0, nec. for unique PK\n",
+    "      item_in_session INT,  -- clustering column 1, nec. for unique PK\n",
     "      PRIMARY KEY (song_title, session_id, item_in_session)\n",
     "    )\n",
     "    \"\"\"\n",
@@ -495,11 +567,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Insert the appropriate data based on the data model\n",
+    "\n",
     "file = 'event_datafile_new.csv'\n",
     "\n",
     "query = \\\n",
     "    \"\"\"\n",
-    "    INSERT INTO table_3 (\n",
+    "    INSERT INTO user_song_table (\n",
     "      first_name,\n",
     "      last_name,\n",
     "      song_title,\n",
@@ -522,22 +596,50 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sara Johnson\n",
-      "Jacqueline Lynch\n",
-      "Tegan Levine\n"
-     ]
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>first_name</th>\n",
+       "      <th>last_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>Sara</td>\n",
+       "      <td>Johnson</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Jacqueline</td>\n",
+       "      <td>Lynch</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Tegan</td>\n",
+       "      <td>Levine</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Do a SELECT to verify the data model and \n",
+    "# that correct data has been inserted into the table\n",
+    "\n",
     "query = \\\n",
     "    \"\"\"\n",
     "    SELECT\n",
     "      first_name,\n",
     "      last_name\n",
-    "    FROM table_3 \n",
+    "    FROM user_song_table \n",
     "    WHERE song_title='All Hands Against His Own'\n",
     "    \"\"\"\n",
     "\n",
@@ -546,8 +648,7 @@
     "except Exception as e:\n",
     "    print(e)\n",
     "\n",
-    "for row in rows:\n",
-    "    print(row.first_name, row.last_name)"
+    "HTML(pd.DataFrame(rows).to_html(index=False))"
    ]
   },
   {
@@ -563,24 +664,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Drop the table before closing out the sessions\n",
-    "query = \"DROP TABLE IF EXISTS table_1\"\n",
+    "# Drop the first table\n",
+    "query = \"DROP TABLE IF EXISTS artist_song_table\"\n",
     "\n",
     "try:\n",
     "    res = session.execute(query)\n",
     "except Execption as e:\n",
     "    print(e)\n",
     "    \n",
-    "\n",
-    "query = \"DROP TABLE IF EXISTS table_2\"\n",
+    "# Drop the second table\n",
+    "query = \"DROP TABLE IF EXISTS artist_song_user_table\"\n",
     "\n",
     "try:\n",
     "    res = session.execute(query)\n",
     "except Execption as e:\n",
     "    print(e)\n",
     "\n",
-    "    \n",
-    "query = \"DROP TABLE IF EXISTS table_3\"\n",
+    "# Drop the third table\n",
+    "query = \"DROP TABLE IF EXISTS user_song_table\"\n",
     "\n",
     "try:\n",
     "    res = session.execute(query)\n",
