Second submission for data modeling project 2 (Lesson 5)

--- a/DataEngineering/1-DataModeling/Lesson5/Project_1B_Project.ipynb
+++ b/DataEngineering/1-DataModeling/Lesson5/Project_1B_Project.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## PLEASE RUN THE FOLLOWING CODE FOR PRE-PROCESSING THE FILES"
+    "## PRE-PROCESS THE DATA FILES"
    ]
   },
   {
@@ -139,9 +139,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part II. Complete the Apache Cassandra coding portion of your project. \n",
+    "# Part II. Apache Cassandra coding portion of your project. \n",
     "\n",
-    "## Now you are ready to work with the CSV file titled <font color=red>event_datafile_new.csv</font>, located within the Workspace directory.  The event_datafile_new.csv contains the following columns: \n",
+    "## The event_datafile_new.csv contains the following columns: \n",
+    "\n",
     "- artist \n",
     "- firstName of user\n",
     "- gender of user\n",
@@ -154,7 +155,7 @@
     "- song title\n",
     "- userId\n",
     "\n",
-    "The image below is a screenshot of what the denormalized data should appear like in the <font color=red>**event_datafile_new.csv**</font> after the code above is run:<br>\n",
+    "The image below is a screenshot of what the denormalized data should appear like in the `event_datafile_new.csv` after the code above is run:<br>\n",
     "\n",
     "<img src=\"images/image_event_datafile_new.jpg\">"
    ]
@@ -163,7 +164,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Begin writing your Apache Cassandra code in the cells below"
+    "## Apache Cassandra code in the cells below"
    ]
   },
   {
@@ -236,13 +237,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Now we need to create tables to run the following queries. Remember, with Apache Cassandra you model the database tables on the queries you want to run."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Create queries to ask the following three questions of the data"
    ]
   },
@@ -250,7 +244,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Query 1: Give me the artist, song title and song's length in the music app history that was heard during  sessionId = 338, and itemInSession  = 4"
+    "### Query 1: Give me the artist, song title and song's length in the music app history that was heard during  sessionId = 338, and itemInSession  = 4\n",
+    "\n",
+    "Query Description: Here the `session_id` and `item_in_session` fields will be used in the WHERE clause, so these two fields should (1) make up the composite primary key and (2) make up the composite partition key. As a composite primary key, these fields will allow each record in the table to be uniquely identified. They weren't originally part of a composite partition key, but I received feedback that they should be. However, I don't fully understand the rationale."
    ]
   },
   {
@@ -264,12 +260,12 @@
     "query = \\\n",
     "    \"\"\"\n",
     "    CREATE TABLE IF NOT EXISTS artist_song_table (\n",
+    "      session_id      INT, -- partition key column 0\n",
+    "      item_in_session INT, -- partition key column 1\n",
     "      artist_name     TEXT,\n",
     "      song_title      TEXT,\n",
     "      song_length     DOUBLE,\n",
-    "      session_id      INT, -- partition key\n",
-    "      item_in_session INT, -- clustering column\n",
-    "      PRIMARY KEY (session_id, item_in_session)\n",
+    "      PRIMARY KEY ((session_id, item_in_session))\n",
     "    )\n",
     "    \"\"\"\n",
     "\n",
@@ -294,11 +290,11 @@
     "query = \\\n",
     "    \"\"\"\n",
     "    INSERT INTO artist_song_table (\n",
+    "      session_id,\n",
+    "      item_in_session,\n",
     "      artist_name,\n",
     "      song_title,\n",
-    "      song_length,\n",
-    "      session_id,\n",
-    "      item_in_session\n",
+    "      song_length\n",
     "    )\n",
     "    VALUES (%s, %s, %s, %s, %s)\n",
     "    \"\"\"\n",
@@ -306,15 +302,11 @@
     "with open(file, encoding = 'utf8') as f:\n",
     "    csvreader = csv.reader(f)\n",
     "    next(csvreader) # skip header\n",
-    "    for line in csvreader:\n",
-    "        session.execute(query, (line[0], line[9], float(line[5]), int(line[8]), int(line[3])))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Do a SELECT to verify that the data have been inserted into each table"
+    "    for line in csvreader:     \n",
+    "        session.execute(\n",
+    "          query, \n",
+    "          (int(line[8]), int(line[3]), line[0], line[9], float(line[5]))\n",
+    "        )"
    ]
   },
   {
@@ -381,7 +373,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Query 2. Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name) for userid = 10, sessionid = 182"
+    "### Query 2. Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name) for userid = 10, sessionid = 182\n",
+    "\n",
+    "Query Description: Here the `user_id` and `session_id` fields will be used in the WHERE clause, so these two fields should (1) make up _**part**_ of the composite primary key and (2) make up the composite partition key. In addition to `user_id` and `session_id`, the `item_in_session` field will be included as the final part of the composite primary key. As a composite primary key, these three fields will allow each record in the table to be uniquely identified. As a composite partition key, both `user_id` and `session_id` will allow partitions to be appropriately sized for performant queries."
    ]
   },
   {
@@ -395,14 +389,14 @@
     "query = \\\n",
     "    \"\"\"\n",
     "    CREATE TABLE IF NOT EXISTS artist_song_user_table (\n",
+    "      user_id         INT,  -- partition key column 0\n",
+    "      session_id      INT,  -- partition key column 1\n",
+    "      item_in_session INT,  -- clustering column 0\n",
     "      artist_name     TEXT,\n",
     "      song_title      TEXT,\n",
     "      first_name      TEXT,\n",
     "      last_name       TEXT,\n",
-    "      user_id         INT, -- partition key\n",
-    "      session_id      INT, -- clustering column 0\n",
-    "      item_in_session INT, -- clustering column 1\n",
-    "      PRIMARY KEY (user_id, session_id, item_in_session)\n",
+    "      PRIMARY KEY ((user_id, session_id), item_in_session)\n",
     "    )\n",
     "    \"\"\"\n",
     "\n",
@@ -425,13 +419,13 @@
     "query = \\\n",
     "    \"\"\"\n",
     "    INSERT INTO artist_song_user_table (\n",
+    "      user_id,\n",
+    "      session_id,\n",
+    "      item_in_session,\n",
     "      artist_name,\n",
     "      song_title,\n",
     "      first_name,\n",
-    "      last_name,\n",
-    "      user_id,\n",
-    "      session_id,\n",
-    "      item_in_session\n",
+    "      last_name\n",
     "    )\n",
     "    VALUES (%s, %s, %s, %s, %s, %s, %s)\n",
     "    \"\"\"\n",
@@ -440,7 +434,10 @@
     "    csvreader = csv.reader(f)\n",
     "    next(csvreader) # skip header\n",
     "    for line in csvreader:\n",
-    "        session.execute(query, (line[0], line[9], line[1], line[4], int(line[10]), int(line[8]), int(line[3])))"
+    "        session.execute(\n",
+    "          query, \n",
+    "          (int(line[10]), int(line[8]), int(line[3]), line[0], line[9], line[1], line[4])\n",
+    "        )"
    ]
   },
   {
@@ -532,7 +529,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Query 3. Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'"
+    "### Query 3. Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
+    "\n",
+    "Query Description: Here the `song_title` field will be used in the WHERE clause, so this field should (1) make up _**part**_ of the composite primary key and (2) be the partition key. In addition to `song_title`, the `user_id` field will be included as the final part of the composite primary key. As a composite primary key, these two fields will allow each record in the table to be uniquely identified. A reviewer recommended that both fields make up the composite partition key, but implementing this resulted in the following error message:\n",
+    "\n",
+    "```\n",
+    "Error from server: code=2200 [Invalid query] \n",
+    "message=\"Partition key parts: user_id must be restricted as other parts are\"\n",
+    "```\n",
+    "\n",
+    "Therefore, only the `song_title` field has been retained as the sole partition key column."
    ]
   },
   {
@@ -546,12 +552,11 @@
     "query = \\\n",
     "    \"\"\"\n",
     "    CREATE TABLE IF NOT EXISTS user_song_table (\n",
+    "      song_title      TEXT, -- partition key column 0\n",
+    "      user_id         INT,  -- clustering column 0\n",
     "      first_name      TEXT,\n",
     "      last_name       TEXT,\n",
-    "      song_title      TEXT, -- partition key\n",
-    "      session_id      INT,  -- clustering column 0, nec. for unique PK\n",
-    "      item_in_session INT,  -- clustering column 1, nec. for unique PK\n",
-    "      PRIMARY KEY (song_title, session_id, item_in_session)\n",
+    "      PRIMARY KEY (song_title, user_id)\n",
     "    )\n",
     "    \"\"\"\n",
     "\n",
@@ -574,20 +579,22 @@
     "query = \\\n",
     "    \"\"\"\n",
     "    INSERT INTO user_song_table (\n",
-    "      first_name,\n",
-    "      last_name,\n",
     "      song_title,\n",
-    "      session_id,\n",
-    "      item_in_session\n",
+    "      user_id,\n",
+    "      first_name,\n",
+    "      last_name\n",
     "    )\n",
-    "    VALUES (%s, %s, %s, %s, %s)\n",
+    "    VALUES (%s, %s, %s, %s)\n",
     "    \"\"\"\n",
     "\n",
     "with open(file, encoding = 'utf8') as f:\n",
     "    csvreader = csv.reader(f)\n",
     "    next(csvreader) # skip header\n",
     "    for line in csvreader:\n",
-    "        session.execute(query, (line[1], line[4], line[9], int(line[8]), int(line[3])))"
+    "        session.execute(\n",
+    "          query, \n",
+    "          (line[9], int(line[10]), line[1], line[4])\n",
+    "        )"
    ]
   },
   {
@@ -607,16 +614,16 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>Sara</td>\n",
-       "      <td>Johnson</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <td>Jacqueline</td>\n",
        "      <td>Lynch</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>Tegan</td>\n",
        "      <td>Levine</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Sara</td>\n",
+       "      <td>Johnson</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>"
