--- a/DataEngineering/3-DataLakesWithSpark/Lesson2/3_data_inputs_and_outputs.ipynb
+++ b/DataEngineering/3-DataLakesWithSpark/Lesson2/3_data_inputs_and_outputs.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!export SPARK_HOME=\"$HOME/spark-2.4.5-bin-hadoop2.7\""
+    "# !export SPARK_HOME=\"$HOME/spark-2.4.5-bin-hadoop2.7\""
    ]
   },
   {
