--- a/DataEngineering/3-DataLakesWithSpark/Lesson2/7_data_wrangling-sql.ipynb
+++ b/DataEngineering/3-DataLakesWithSpark/Lesson2/7_data_wrangling-sql.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
        "[Row(artist='Showaddywaddy', auth='Logged In', firstName='Kenneth', gender='M', itemInSession=112, lastName='Matthews', length=232.93342, level='paid', location='Charlotte-Concord-Gastonia, NC-SC', method='PUT', page='NextSong', registration=1509380319284, sessionId=5132, song='Christmas Tears Will Fall', status=200, ts=1513720872284, userAgent='\"Mozilla/5.0 (Windows NT 6.1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/36.0.1985.125 Safari/537.36\"', userId='1046')]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -246,7 +246,7 @@
        " Row(userID='1046', firstname='Kenneth', page='NextSong', song='Under The Gun')]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -308,25 +308,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "spark.udf.register(\"get_hour\", lambda x: int(datetime.datetime.fromtimestamp(x / 1000.0).hour))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[Row(artist='Showaddywaddy', auth='Logged In', firstName='Kenneth', gender='M', itemInSession=112, lastName='Matthews', length=232.93342, level='paid', location='Charlotte-Concord-Gastonia, NC-SC', method='PUT', page='NextSong', registration=1509380319284, sessionId=5132, song='Christmas Tears Will Fall', status=200, ts=1513720872284, userAgent='\"Mozilla/5.0 (Windows NT 6.1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/36.0.1985.125 Safari/537.36\"', userId='1046', hour='22')]"
+       "<function __main__.<lambda>(x)>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spark.udf.register(\"get_hour\", lambda x: int(datetime.datetime.fromtimestamp(x / 1000.0).hour), IntegerType())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Row(artist='Showaddywaddy', auth='Logged In', firstName='Kenneth', gender='M', itemInSession=112, lastName='Matthews', length=232.93342, level='paid', location='Charlotte-Concord-Gastonia, NC-SC', method='PUT', page='NextSong', registration=1509380319284, sessionId=5132, song='Christmas Tears Will Fall', status=200, ts=1513720872284, userAgent='\"Mozilla/5.0 (Windows NT 6.1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/36.0.1985.125 Safari/537.36\"', userId='1046', hour=17)]"
+      ]
+     },
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,14 +362,15 @@
     "          FROM user_log_table\n",
     "          WHERE page = \"NextSong\"\n",
     "          GROUP BY hour\n",
-    "          ORDER BY cast(hour as int) ASC\n",
+    "          -- ORDER BY cast(hour as int) ASC\n",
+    "          ORDER BY hour ASC\n",
     "          '''\n",
     "          )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -368,26 +380,26 @@
       "+----+--------------+\n",
       "|hour|plays_per_hour|\n",
       "+----+--------------+\n",
-      "|   0|           456|\n",
-      "|   1|           454|\n",
-      "|   2|           382|\n",
-      "|   3|           302|\n",
-      "|   4|           352|\n",
-      "|   5|           276|\n",
-      "|   6|           348|\n",
-      "|   7|           358|\n",
-      "|   8|           375|\n",
-      "|   9|           249|\n",
-      "|  10|           216|\n",
-      "|  11|           228|\n",
-      "|  12|           251|\n",
-      "|  13|           339|\n",
-      "|  14|           462|\n",
-      "|  15|           479|\n",
-      "|  16|           484|\n",
-      "|  17|           430|\n",
-      "|  18|           362|\n",
-      "|  19|           295|\n",
+      "|   0|           276|\n",
+      "|   1|           348|\n",
+      "|   2|           358|\n",
+      "|   3|           375|\n",
+      "|   4|           249|\n",
+      "|   5|           216|\n",
+      "|   6|           228|\n",
+      "|   7|           251|\n",
+      "|   8|           339|\n",
+      "|   9|           462|\n",
+      "|  10|           479|\n",
+      "|  11|           484|\n",
+      "|  12|           430|\n",
+      "|  13|           362|\n",
+      "|  14|           295|\n",
+      "|  15|           257|\n",
+      "|  16|           248|\n",
+      "|  17|           369|\n",
+      "|  18|           375|\n",
+      "|  19|           456|\n",
       "+----+--------------+\n",
       "only showing top 20 rows\n",
       "\n"
@@ -407,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,44 +428,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   hour  plays_per_hour\n",
-      "0     0             456\n",
-      "1     1             454\n",
-      "2     2             382\n",
-      "3     3             302\n",
-      "4     4             352\n",
-      "5     5             276\n",
-      "6     6             348\n",
-      "7     7             358\n",
-      "8     8             375\n",
-      "9     9             249\n",
-      "10   10             216\n",
-      "11   11             228\n",
-      "12   12             251\n",
-      "13   13             339\n",
-      "14   14             462\n",
-      "15   15             479\n",
-      "16   16             484\n",
-      "17   17             430\n",
-      "18   18             362\n",
-      "19   19             295\n",
-      "20   20             257\n",
-      "21   21             248\n",
-      "22   22             369\n",
-      "23   23             375\n"
+      "    hour  plays_per_hour\n",
+      "0      0             276\n",
+      "1      1             348\n",
+      "2      2             358\n",
+      "3      3             375\n",
+      "4      4             249\n",
+      "5      5             216\n",
+      "6      6             228\n",
+      "7      7             251\n",
+      "8      8             339\n",
+      "9      9             462\n",
+      "10    10             479\n",
+      "11    11             484\n",
+      "12    12             430\n",
+      "13    13             362\n",
+      "14    14             295\n",
+      "15    15             257\n",
+      "16    16             248\n",
+      "17    17             369\n",
+      "18    18             375\n",
+      "19    19             456\n",
+      "20    20             454\n",
+      "21    21             382\n",
+      "22    22             302\n",
+      "23    23             352\n"
      ]
     }
    ],
    "source": [
     "print(songs_in_hour_pd)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -472,9 +491,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
