Ensure local repo move goes okay

--- a/DataEngineering/1-DataModeling/Lesson3/etl.ipynb
+++ b/DataEngineering/1-DataModeling/Lesson3/etl.ipynb
@@ -75,7 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "song_files = get_files(\"/home/hynso/SpiderOak Hive/Learning/Udacity/DataEngineering/1-DataModeling/Lesson3/data/song_data\")"
+    "song_files = get_files(\"/home/hynso/Documents/Learning/Udacity/DataEngineering/1-DataModeling/Lesson3/data/song_data\")"
    ]
   },
   {
@@ -86,7 +86,7 @@
     {
      "data": {
       "text/plain": [
-       "'/home/hynso/SpiderOak Hive/Learning/Udacity/DataEngineering/1-DataModeling/Lesson3/data/song_data/A/A/A/TRAAARJ128F9320760.json'"
+       "'/home/hynso/Documents/Learning/Udacity/DataEngineering/1-DataModeling/Lesson3/data/song_data/A/A/A/TRAAARJ128F9320760.json'"
       ]
      },
      "execution_count": 6,
@@ -319,7 +319,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "log_files = get_files(\"/home/hynso/SpiderOak Hive/Learning/Udacity/DataEngineering/1-DataModeling/Lesson3/data/log_data\")"
+    "log_files = get_files(\"/home/hynso/Documents/Learning/Udacity/DataEngineering/1-DataModeling/Lesson3/data/log_data\")"
    ]
   },
   {
