--- a/DataEngineering/1-DataModeling/Lesson5/Project_1B_Project.ipynb
+++ b/DataEngineering/1-DataModeling/Lesson5/Project_1B_Project.ipynb
@@ -57,7 +57,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/hynso/SpiderOak Hive/Learning/Udacity/DataEngineering/1-DataModeling/Lesson5\n"
+      "/home/hynso/Documents/Learning/Udacity/DataEngineering/1-DataModeling/Lesson5\n"
      ]
     }
    ],
